--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.android.support:design:24.2.1'
-    compile 'com.google.android.gms:play-services:10.2.0'
+    compile 'com.google.android.gms:play-services-maps:10.2.0'
+    //compile 'com.google.android.gms:play-services:10.2.0'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta5'
 }
