infoprop.xml fixed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
         <activity android:name=".RegisterJuridicoActivity" />
         <activity android:name=".infoPropActivity" />
         <activity android:name=".RelatorioActivity" />
-        <activity android:name=".PropriedadeActivity"></activity>
+        <activity android:name=".PropriedadeActivity" />
     </application>
 
 </manifest>
