finished addNewRegisterActivity events

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
         <activity android:name=".infoPropActivity" />
         <activity android:name=".RelatorioActivity" />
         <activity android:name=".PropriedadeActivity" />
-        <activity android:name=".addNewRegisterActivity"></activity>
+        <activity android:name=".addNewRegisterActivity" />
+        <activity android:name=".FotosActivity"></activity>
     </application>
 
 </manifest>
