--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <uses-feature android:name="android.hardware.location.gps" />
     <uses-feature android:name="android.hardware.location.network" />
@@ -37,7 +39,8 @@
         <activity android:name=".RelatorioActivity" />
         <activity android:name=".PropriedadeActivity" />
         <activity android:name=".addNewRegisterActivity" />
-        <activity android:name=".FotosActivity"></activity>
+        <activity android:name=".FotosActivity" />
+        <activity android:name=".FotosInternActivity"></activity>
     </application>
 
 </manifest>
