--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logotransp"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -31,16 +31,44 @@
 
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps" />
-        <activity android:name=".MainActivity" />
-        <activity android:name=".RegisterActivity" />
-        <activity android:name=".RegisterJuridicoActivity" />
-        <activity android:name=".infoPropActivity" />
-        <activity android:name=".RelatorioActivity" />
-        <activity android:name=".PropriedadeActivity" />
-        <activity android:name=".addNewRegisterActivity" />
-        <activity android:name=".FotosActivity" />
-        <activity android:name=".FotosInternActivity"></activity>
+            android:label="@string/title_activity_maps"
+            android:screenOrientation="portrait"
+            />
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait"
+            />
+        <activity
+            android:name=".RegisterActivity"
+            android:screenOrientation="portrait"
+            />
+        <activity
+            android:name=".RegisterJuridicoActivity"
+            android:screenOrientation="portrait"
+            />
+        <activity
+            android:name=".infoPropActivity"
+            android:screenOrientation="portrait"
+            />
+        <activity
+            android:name=".RelatorioActivity"
+            android:screenOrientation="portrait"
+            />
+        <activity
+            android:name=".PropriedadeActivity"
+            android:screenOrientation="portrait"
+            />
+        <activity
+            android:name=".addNewRegisterActivity"
+            android:screenOrientation="portrait"
+            />
+        <activity
+            android:name=".FotosActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".FotosInternActivity"
+            android:screenOrientation="portrait"
+            />
     </application>
 
 </manifest>
