--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,10 @@
             android:label="@string/title_activity_maps"
             android:screenOrientation="portrait"
             />
+        <activity android:name=".MapaActivity"
+            android:label="BR 158"
+            android:screenOrientation="portrait"
+            />
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait"
